Multiple stress/regexp-compile-oom.js tests are failing on High Sierra Debug and Release JSC testers. https://bugs.webkit.org/show_bug.cgi?id=191271

Reviewed by Saam Barati.

JSTests:

Added more test cases and made all test cases run with the same deeply recursive stack
instead of finding that same point for each test case.

* stress/regexp-compile-oom.js:
(prototype.runTest):
(recurseAndTest):
(testList.push.new.TestAndExpectedException):

Source/JavaScriptCore:

Fixed use of ThrowScope my adding release() calls.  Found a few places where we needed
RETURN_IF_EXCEPTION().  After some code inspections determined that we need to cover the
exception bubbling for String.match() with a global RegExp as well as String.replace()
and String.search().

* runtime/RegExpObjectInlines.h:
(JSC::RegExpObject::matchInline):
(JSC::collectMatches):
* runtime/RegExpPrototype.cpp:
(JSC::regExpProtoFuncSearchFast):
* runtime/StringPrototype.cpp:
(JSC::removeUsingRegExpSearch):
(JSC::replaceUsingRegExpSearch):


Canonical link: https://commits.webkit.org/206120@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@237877 268f45cc-cd09-0410-ab3c-d52691b4dbfc